--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,9 @@
 <h1>HomePages</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
-<%= @posts.inspect %>
+
+<h1> Blogs</h1>
+<%= @posts.inspect %> 
+
+
+<h1>Skills</h1>
+<%= @skills.inspect %> 
