--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -8,4 +8,6 @@
 <p><%= portfolio_item.body  %> </p>
 <p><%= image_tag portfolio_item.thumb_image unless  portfolio_item.thumb_image.nil? %> </p>
 <%= link_to "Edit portfolio",edit_portfolio_path(portfolio_item.id) %>
-<% end %>
+<%= link_to "Delete",portfolio_path(portfolio_item.id),method: :delete, data: {confirm: "are you sure you want to delete?"} %>
+
+<% end %> 
